sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:25: error: ')' expected but integer literal found.
  while ((res2!= || res1!=0)
                          ^